# spacecraft_sim

./: README.md
examples/cubesat_launch/: CMakeLists.txt  package.xml
examples/cubesat_launch/launch/: cubesat.launch
examples/cubesat_mating_launch/: CMakeLists.txt  package.xml
examples/cubesat_mating_launch/launch/: .cubesat_mating.launch.swp  cubesat_mating.launch
examples/fss_launch/: CMakeLists.txt  package.xml
examples/fss_launch/launch/: fss.launch
examples/polysat_launch/: CMakeLists.txt  package.xml
examples/polysat_launch/launch/: .polysat.launch.swp  launch_apriltag_continuous.launch  plot_position.launch  plot_thrusters.launch  polysat.launch  polysat_oberon7.launch  polysat_perseus.launch  polysat_perseus_sdf.launch  polysat_sdf.launch  polysat_sdf_mating.launch  polysat_sensors.launch  polysat_urdf.launch
examples/polysat_plugin_launch/: CMakeLists.txt  package.xml
examples/polysat_plugin_launch/launch/: polysat.launch
examples/prime_launch/: CMakeLists.txt  package.xml
examples/prime_launch/launch/: prime.launch  prime_two_bot.launch
sc_control/: CMakeLists.txt  package.xml  setup.py
sc_control/launch/: polysat_thrusterop.launch
sc_control/rviz_config/: sc_rviz.rviz
sc_control/scripts/: .position_control.py.swp  .sc_manual_thrusterop.py.swp  apriltag_grasp.py  bimanual_simple_demo.py  meeting_5_20_22.txt  move_group_python_interface_tutorial.py  multi_torque_input.py  position_command.py  position_control.py  position_control_orig.py  position_manager.py  thrust_input.py  torque_input.py  velocity_control.py
sc_control/src/: pid_controller_base.py  sc_manual_thrusterop.py
sc_control/src/PID/: PIDControllerBase.py  __init__.py
sc_gazebo_plugins/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
sc_gazebo_plugins/include/sc_gazebo_plugins/: .sc_imu_gazebo_plugin.hh.swp  Common.hh  ROSBaseModelPlugin.hh  ROSBasePlugin.hh  sc_gazebo_thrust_plugin.hh  sc_imu_gazebo_plugin.hh  sc_led_visual_plugin.hh  sc_pose_gt_plugin.hh  sc_reaction_wheel_plugin.hh  sc_set_initial_velocity.hh  sc_thrust_visual_plugin.hh
sc_gazebo_plugins/scripts/: .sc_tf_broadcaster.py.swp  sc_tf_broadcaster.py
sc_gazebo_plugins/src/: ROSBaseModelPlugin.cc  ROSBasePlugin.cc  ROSBaseSensorPlugin.cc  sc_gazebo_thrust_plugin.cc  sc_imu_gazebo_plugin.cc  sc_led_visual_plugin.cc  sc_plug_and_socket_plugin.cc  sc_pose_gt_plugin.cc  sc_reaction_wheel_plugin.cc  sc_set_initial_velocity.cpp  sc_thrust_visual_plugin.cc  sc_torsional_spring_joint_plugin.cc
sc_gazebo_plugins/urdf/: basic_lidar.xacro  camera.xacro  hokuyo_lx30.xacro  imu.xacro  pose_3d.xacro  reaction_wheel.xacro
sc_gazebo_plugins_msgs/: CMakeLists.txt  package.xml
sc_models/: CMakeLists.txt  package.xml
sc_models/models/apriltags/tag36_11_00000/meshes/: tag36_11_00000.dae
sc_models/models/grab_solar_panel/: model.config  model.sdf
sc_models/models/grab_solar_panel/meshes/: grasp_panel.dae
sc_models/models/granite_table/: model.config  model.sdf
sc_models/models/granite_table/meshes/: granite_table.dae
sc_models/models/import_cube/: untitled.dae
sc_models/models/solar_collector/: model.config  model.sdf
sc_models/models/solar_collector/meshes/: collector.dae
sc_utils/: CMakeLists.txt  package.xml
sc_utils/apriltag_config/: settings.yaml  tags.yaml
sc_utils/bash_scripts/: add_plugin_lines.py  generate_fresh_sdf.sh  generate_sdf_from_world.sh  modify_paths.py
sc_utils/data/: .~lock.clouse_2023_torque_v_time.txt.csv#  clouse_2023_torque_v_time.csv  clouse_2023_torque_v_time.txt  clouse_2023_torque_v_time_updated.csv  clouse_2023_torque_v_time_updated.txt
sc_utils/data/paper_files/Paper1_Ex1/: myFile_ResttoRest_time_torque.txt
sc_utils/data/paper_files/Paper1_Ex2/: myFile_nonRest_to_Rest_time_torque.txt  myFile_nonRest_to_Rest_time_torque_cvmod.txt
sc_utils/data/paper_files/Paper2_Ex1/: ZVDD_ex1_RtR2.txt
sc_utils/data/paper_files/Paper2_Ex2/: ZVDD_ex1_nRtR.txt
sc_utils/torque_scripts/: HUB_BEAM_NLMPC22.m  TimeTorque_p1.txt  TimeTorque_p2.txt  extract_torque.py
sc_worlds/: CMakeLists.txt  package.xml
sc_worlds/worlds/: basic_space.world  granite_table.world  otoole_physics.world  plugin_space.world  sensor_world.world
sc_worlds/worlds/tmp/: saved_arm_world  socket_platform  working_arms
urdf/manipulators/oberon7_description/: package.xml
urdf/manipulators/oberon7_description/urdf/: oberon7.gazebo.xacro  oberon7.transmission.xacro
urdf/manipulators/perseus_control/: CMakeLists.txt  package.xml
urdf/manipulators/perseus_description/: CMakeLists.txt  package.xml
urdf/manipulators/perseus_gazebo/: CMakeLists.txt  package.xml
urdf/manipulators/perseus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
urdf/manipulators/plug_and_socket_description/: package.xml
urdf/robots/cubesat_a_description/: CMakeLists.txt  package.xml
urdf/robots/cubesat_a_description/launch/: upload_cubesat.launch
urdf/robots/cubesat_a_description/meshes/: large_cubesat_female.dae
urdf/robots/cubesat_a_description/urdf/: cubesat_base.xacro
urdf/robots/cubesat_b_description/: CMakeLists.txt  package.xml
urdf/robots/cubesat_description/: CMakeLists.txt  package.xml
urdf/robots/fss_description/: CMakeLists.txt  package.xml
urdf/robots/fss_description/launch/: upload_fss.launch
urdf/robots/fss_description/meshes/: fss.dae
urdf/robots/fss_description/urdf/: fss_base.xacro  fss_robot.urdf.xacro
urdf/robots/polysat_description/: CMakeLists.txt  package.xml
urdf/robots/polysat_oberon7_moveit/: .setup_assistant  CMakeLists.txt  package.xml
urdf/robots/polysat_perseus_description/: CMakeLists.txt  package.xml
urdf/robots/polysat_perseus_moveit/: .setup_assistant  CMakeLists.txt  package.xml
urdf/robots/prime_description/: CMakeLists.txt  package.xml
urdf/robots/prime_description/launch/: prime_multi.launch  prime_upload.launch  upload_prime.launch
urdf/robots/prime_description/meshes/: air_bearing.dae  prime_fss.dae
urdf/robots/prime_description/urdf/: prime_air_bearing.xacro  prime_base.xacro  prime_robot.urdf.xacro
worlds/: CMakeLists.txt
(+131 files in other folders)
