<?xml version="1.0"?>
<package format="2">
  <name>sc_gazebo_plugins_msgs</name>
  <version>0.6.13</version>
  <description>The sc_gazebo_plugins_msgs package</description>

  <maintainer email="crvogt@nps.edu">Carson Vogt</maintainer>
  <author email="crvogt@nps.edu">Carson Vogt</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_export_depend>geometry_msgs</build_export_depend>

  <export>
  </export>
</package>
