<?xml version="1.0"?>
<package format="2">
  <name>sc_utils</name>
  <version>3.1.1</version>
  <description>The utils package</description>
  <author email="crvogt@nps.edu">Carson Vogt</author>
  <maintainer email="crvogt@nps.edu">Carson Vogt</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>

</package>
