<?xml version="1.0"?>
<package format="2">
  <name>prime_launch</name>
  <version>3.1.1</version>
  <description>The prime_launch package</description>
  <maintainer email="crvogt@nps.edu">Carson Vogt</maintainer>
  <license>Apache2</license>
  <author email="crvogt@nps.edu">Carson Vogt</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>prime_description</depend>
  <depend>sc_gazebo_plugins</depend>
  <export>
  </export>
</package>
