<?xml version="1.0"?>
<package format="2">
  <name>perseus_control</name>
  <version>0.6.1</version>
  <description>Package with configuration and launch files to control the perseus manipulator.</description>
  <maintainer email="crvogt@nps.edu">Carson Vogt</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

</package>
