<?xml version="1.0"?>
<package format="2">
  <name>cubesat_a_description</name>
  <version>3.1.1</version>
  <description>The cubesat_a_description package</description>
  <author email="crvogt@nps.edu">Carson Vogt</author>
  <maintainer email="crvogt@nps.edu">dtd</maintainer>
  <license>Apache2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
