<?xml version="1.0"?>
<package format="2">
  <name>fss_description</name>
  <version>3.1.1</version>
  <description>The fss_description package</description>
  <author email="crvogt@nps.edu">Carson Vogt</author>
  <maintainer email="crvogt@nps.edu">dtd</maintainer>
  <license>Apache2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
